--- a/product.html
+++ b/product.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AINI Product Page</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="product.css"> -->
+    <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
 </head>
 <body>
     <div id="toggle-bar" class="toggle-bar hidden">
