--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
     <header>
         <a href="index.html"><img class="logo-header" src="Assets/images/Logo.svg" alt="AINI logo" title="AINI logo"></a>        
         <nav class="nav-header">
-            <a href="#">პროდუქტი</a>
+            <a href="list.html">პროდუქტი</a>
             <a href="#contact">კონტაქტი</a>
         </nav>
         <div id="burger" class="burger">
