--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="toggle-bar" class="toggle-bar hidden">
         <ul class="something">
             <li><a href="list.html">პროდუქტი</a></li>
-            <li><a id="contact-click" href="#contact">კონტაქტი</a></li>
+            <li><a id="contact-click" href="contact.html">კონტაქტი</a></li>
         </ul>
         <div class="nothing">
         </div>
@@ -18,7 +18,7 @@
     <header><a href="index.html"> <img class="logo-header" src="Assets/images/Logo.svg" alt="AINI logo" title="AINI logo"></a>
         <nav class="nav-header">
             <a href="list.html">პროდუქტი</a>
-            <a href="#contact">კონტაქტი</a>
+            <a href="contact.html">კონტაქტი</a>
         </nav>
         <div id="burger" class="burger">
             <span class="bg-one"></span>
