--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <div id="toggle-bar" class="toggle-bar hidden">
         <ul class="something">
             <li><a href="list.html">პროდუქტი</a></li>
-            <li><a href="contact.html" id="contact-click" href="#contact">კონტაქტი</a></li>
+            <li><a id="contact-click" href="contact.html">კონტაქტი</a></li>
         </ul>
         <div class="nothing">
         </div>
@@ -27,20 +27,56 @@
         </div>
     </header>
     <main class="ppage-main">
-        <div class="product-main bonus plus">
-            <h5><span>AINI</span> -ის ლიმიტირებული ექსკლუზიური გამოცემა</h5>
-            <h6><span>100</span> ლარი</h6>
-            <p>სპეციალური გამოცემა <span>Huzzle Hourglass Puzzle</span> თავსატეხი, რომლებიც იაპონიაში შეიქმნა. </p>
-            <p class="central-p">უფასო მიწოდება</p>
-            <div class="buy-at-last">
-                <a class="main-add-btn" href="#!">ყიდვა</a>
-                <svg xmlns="http://www.w3.org/2000/svg" width="44.408" height="39.82" viewBox="0 0 44.408 39.82">
-                    <path id="cart" d="M331.161,2684.09h30.625a1.553,1.553,0,0,0,.929-.31,1.525,1.525,0,0,0,.548-.81l4.594-16.85a1.489,1.489,0,0,0,.027-.69,1.568,1.568,0,0,0-.286-.64,1.444,1.444,0,0,0-.539-.44,1.462,1.462,0,0,0-.68-.16h-35.41l-.574-3.33a1.528,1.528,0,0,0-1.531-1.27h-3.828a1.564,1.564,0,0,0-1.083.45,1.535,1.535,0,0,0,0,2.17,1.564,1.564,0,0,0,1.083.45h2.549l3.277,18.37a5.362,5.362,0,1,0,.3,10.72h1.286a5.371,5.371,0,0,0,.307,5.17,5.36,5.36,0,0,0,9.37-5.17h7.932a5.371,5.371,0,0,0,.307,5.17,5.359,5.359,0,0,0,9.882-2.55,5.361,5.361,0,0,0-.511-2.62h4.348a1.519,1.519,0,0,0,1.083-.45,1.542,1.542,0,0,0,.449-1.08,1.535,1.535,0,0,0-1.532-1.53H331.161a2.3,2.3,0,0,1-1.625-3.92A2.308,2.308,0,0,1,331.161,2684.09Zm33.212-16.84-3.759,13.78H333.97l-2.457-13.78Zm-24.791,26.8a2.265,2.265,0,0,1-.387,1.27,2.293,2.293,0,0,1-3.534.35,2.294,2.294,0,0,1,.349-3.53,2.237,2.237,0,0,1,1.276-.39,2.291,2.291,0,0,1,2.3,2.3Zm17.61,0a2.272,2.272,0,0,1-.387,1.27,2.293,2.293,0,0,1-3.534.35,2.293,2.293,0,0,1,.348-3.53,2.242,2.242,0,0,1,1.276-.39,2.292,2.292,0,0,1,2.3,2.3Z" transform="translate(-323.504 -2659.59)" fill="#a1a1a1"></path>
-                </svg>
-            </div>
-        </div>
-        <div class="main-img">
-            <img src="Assets/images/Hourglass.png" alt="Hourglass" title="Hourglass">
+        <div class="conteiner">
+            <section class="contact-sec">
+                <div class="text-conteiner">
+                    <p class="title">საკონტაქტო ინფორმაცია:</p>
+                    <ul class="contact-ul">
+                        <li class="contact-li">
+                            <span>მისამართი:</span>
+                             პეტრიაშვილის ქ.30
+                        </li>
+                        <li class="contact-li">
+                            <span>ტელ.:</span>
+                             +995 32 222 222
+                            </li>
+                        <li class="contact-li">
+                            <span>ელ. ფოსტა:</span>
+                             mail@gmail.com
+                        </li>
+                    </ul>
+                </div>
+                <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.556401213777!2d44.769199814938034!3d41.70851108398982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40447332ce83ce27%3A0x88f10503a3a86e1d!2z4YOY4YOa4YOY4YOQ4YOhIOGDoeGDkOGDruGDlOGDmuGDm-GDrOGDmOGDpOGDnSDhg6Phg5zhg5jhg5Xhg5Thg6Dhg6Hhg5jhg6Lhg5Thg6Lhg5g!5e0!3m2!1ska!2sge!4v1590877935004!5m2!1ska!2sge" width="574" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                
+                </div>
+                
+            </section>
+
+
+            <section>
+                <form class="inbox">
+                    <div class="forms">
+                        <label for="fname">სახელი</label>
+                        <input type="text" name="Name" id="fname" placeholder="...მიუთითეთ სახელი">
+                    </div>
+                    <div class="forms">
+                        <label for="mail">E-mail</label>
+                        <input type="email" name="Name" id="mail" placeholder="...მიუთითეთ e-mail">
+                    </div>
+                    <div class="forms">
+                        <label for="sub">სასაუბრო თემა</label>
+                        <input type="text" name="Name" id="sub" placeholder="...მიუთითეთ სასაუბრო თემა">
+                    </div>
+                    <div class="forms">
+                        <label for="massage">შეტყობინება</label>
+                        <textarea class="textarea-group" id="massage"></textarea>
+                    </div>
+                    <div class="forms">
+                    <button class="send">გაგზავნა</button>
+                    </div>
+                </form>
+            </section>
         </div>
     </main>
     <footer>
