--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
     <div id="toggle-bar" class="toggle-bar hidden">
         <ul class="something">
             <li><a href="list.html">პროდუქტი</a></li>
-            <li><a href="contact.html" id="contact-click" href="#contact">კონტაქტი</a></li>
+            <li><a href="contact.html" id="contact-click">კონტაქტი</a></li>
         </ul>
         <div class="nothing">
         </div>
