--- a/list.html
+++ b/list.html
@@ -299,7 +299,7 @@
     </section>
     <footer>
         <div class="main-footer">
-            <img src="Assets/images/logo.svg" alt="AINI logo" title="AINI logo">
+            <img src="Assets/images/Logo.svg" alt="AINI logo" title="AINI logo">
             <div class="together">
                 <p class="ppp">ჩვენ ვქმნით განსხვავებულს. იმისათვის, რომ შენ შეძლო განივითარო შენი უნარ-ჩვევები, პრობლემის მარტივად გადაჭრის უნარი და შეუზღუდავად ნებისმიერ ასაკში.</p>
                 <ul class="footer-links">
