--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </main>
     <footer>
         <div class="main-footer">
-            <img src="Assets/images/Logo.svg" alt="AINI logo" title="AINI logo">
+            <a href="index.html"><img src="Assets/images/Logo.svg" alt="AINI logo" title="AINI logo"></a>
             <div class="together">
                 <p class="ppp">ჩვენ ვქმნით განსხვავებულს. იმისათვის, რომ შენ შეძლო განივითარო შენი უნარ-ჩვევები, პრობლემის მარტივად გადაჭრის უნარი და შეუზღუდავად ნებისმიერ ასაკში.</p>
                 <ul class="footer-links">
