--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
     <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+    <link rel="shortcut icon" href="Assets/images/Logo.svg" type="image/icon type">
 </head>
 <body>
     <div id="toggle-bar" class="toggle-bar hidden">
