--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AINI Product Page</title>
     <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+    <link rel="shortcut icon" href="Assets/images/Logo.svg">
+
 </head>
 <body>
     <div id="toggle-bar" class="toggle-bar hidden">
