meta tag update
meta tag

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AINI Main Page</title>
+    <meta property="og:title" content="AINI" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://marvelyko.github.io/AINI.ge/index.html"/>
+    <meta property="og:image" content="shorturl.at/deuvG" />
+    <meta property="og:image:width" content="899" />
+    <meta property="og:image:height" content="394" />
+    <meta property="og:description"
+    content="ჩვენ ვქმნით განსხვავებულს. იმისათვის, რომ შენ შეძლო განივითარო შენი უნარ-ჩვევები, პრობლემის მარტივად გადაჭრის უნარი და შეუზღუდავად ნებისმიერ ასაკში. Huzzle Puzzle მე-11 დონის სირთულის თავსატეხი, რომლის ამოხსნაც ავითარებს გონებრივ შესაძლებლობებს." />
     <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
     <link rel="shortcut icon" href="Assets/images/Logo.svg" type="image/icon type">
 </head>
